fix: spacing on bottom

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -243,8 +243,8 @@ img {
     padding-bottom: 1rem;
     display: block;
     position: sticky;
-    top: calc(var(--header-height));
-    height: calc(100vh - var(--header-height));
+    top: var(--header-height);
+    max-height: calc(100vh - var(--header-height));
     margin: 0 auto;
   }
 }
